force-app/main/default/objects/CCR__c/CCR__c.object-meta.xml
<CustomObject>
    <description>SOX object - Actively used object to submit Compensation adjustment requests by the Sales team like additional commissions to Sales Reps, split ratio of commissions between Sales Reps etc</description>
    <label>CCR</label>
    <nameField>
        <displayFormat>CCR-{0000000}</displayFormat>
        <label>CCR #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCRs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>