force-app/main/default/objects/CCR__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CCRs (Account Name)</relationshipLabel>
    <relationshipName>CCR2</relationshipName>
    <type>Lookup</type>
</CustomField>