force-app/main/default/objects/CCR__c/fields/Affected_Person_4__c.field-meta.xml
<CustomField>
    <fullName>Affected_Person_4__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Ops</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GAM-2</description>
    <label>Affected Person 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CCRs6</relationshipName>
    <type>Lookup</type>
</CustomField>