force-app/main/default/objects/CCR__c/fields/Affected_Person_Manual__c.field-meta.xml
<CustomField>
    <fullName>Affected_Person_Manual__c</fullName>
    <inlineHelpText>Use this field if an employee have not signed an offer yet (not in bamboo HR)</inlineHelpText>
    <label>Affected Person (TBH)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>