force-app/main/default/objects/CCR__c/fields/Affected_Person_Region__c.field-meta.xml
<CustomField>
    <fullName>Affected_Person_Region__c</fullName>
    <formula>Affective_Person__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affected Person Region</label>
    <type>Text</type>
</CustomField>