force-app/main/default/objects/CCR__c/fields/Affected_Person_s_Theatre__c.field-meta.xml
<CustomField>
    <fullName>Affected_Person_s_Theatre__c</fullName>
    <formula>Affective_Person__r.Theatre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affected Person&apos;s Theatre</label>
    <type>Text</type>
</CustomField>