force-app/main/default/objects/CCR__c/fields/Affected_Person_ThirdLevel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Affected_Person_ThirdLevel_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected Person ThirdLevel Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CCRsuqTD</relationshipName>
    <type>Lookup</type>
</CustomField>