force-app/main/default/objects/CCR__c/fields/Affected_Territory__c.field-meta.xml
<CustomField>
    <fullName>Affected_Territory__c</fullName>
    <description>Created for SAL26-441</description>
    <label>Affected Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>