force-app/main/default/objects/CCR__c/fields/Approved_Related_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Related_Opportunity_Amount__c</fullName>
    <description>SAL24-300 - that stamps Related Opportunity Amount when CCR Status = Approved</description>
    <label>Approved Related Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>