force-app/main/default/objects/CCR__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>