force-app/main/default/objects/CCR__c/fields/AssignmentStatus__c.field-meta.xml
<CustomField>
    <fullName>AssignmentStatus__c</fullName>
    <label>AssignmentStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
                <default>true</default>
                <label>Unassigned</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>