force-app/main/default/objects/CCR__c/fields/BookingAdjustmentCount__c.field-meta.xml
<CustomField>
    <fullName>BookingAdjustmentCount__c</fullName>
    <description>To Calculate adjusted lineItems for customer return/refund type of booking</description>
    <label>#Booking Adjustments</label>
    <summaryForeignKey>Booking_AdjustmentItems__c.CCR__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>