force-app/main/default/objects/CCR__c/fields/CCR_Split_Exception__c.field-meta.xml
<CustomField>
    <fullName>CCR_Split_Exception__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Ops</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>GAM-2</description>
    <label>CCR Split Exception</label>
    <type>Checkbox</type>
</CustomField>