force-app/main/default/objects/CCR__c/fields/CCR_Subtype__c.field-meta.xml
<CustomField>
    <fullName>CCR_Subtype__c</fullName>
    <description>Created for SAL26-441</description>
    <label>CCR Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Movement (credit and comp)</fullName>
            </value>
            <value>
                <fullName>Out of Territory</fullName>
            </value>
            <value>
                <fullName>Split  (credit and comp)</fullName>
            </value>
            <value>
                <fullName>Holdover</fullName>
            </value>
            <value>
                <fullName>Bundled SKU</fullName>
            </value>
            <value>
                <fullName>MSP POS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>