force-app/main/default/objects/CCR__c/fields/CCR_Type__c.field-meta.xml
<CustomField>
    <fullName>CCR_Type__c</fullName>
    <label>CCR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Rebate</fullName>
            </value>
            <value>
                <fullName>Territory Split</fullName>
            </value>
            <value>
                <fullName>Virgin / Non-Virgin Territory &amp; Quota</fullName>
            </value>
            <value>
                <fullName>Draw(s) AE/SE</fullName>
            </value>
            <value>
                <fullName>Manager Burden Change</fullName>
            </value>
            <value>
                <fullName>Official Change from Payer Coach to Manager</fullName>
            </value>
            <value>
                <fullName>PROMO</fullName>
            </value>
            <value>
                <fullName>Marketing SPIFF</fullName>
            </value>
            <value>
                <fullName>Channel SPIFF</fullName>
            </value>
            <value>
                <fullName>Sales SPIFF</fullName>
            </value>
            <value>
                <fullName>Partner Referral Fee</fullName>
            </value>
            <value>
                <fullName>Concession Request - Returns</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Change in Booking Policy / De-Risk Decision</fullName>
            </value>
            <value>
                <fullName>Customer Returns / Refunds</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Unpaid Replacement Debooking</fullName>
            </value>
            <value>
                <fullName>Compensation Exception</fullName>
            </value>
            <value>
                <fullName>Manual Compensation Transaction</fullName>
            </value>
            <value>
                <fullName>Incorrect Order/Mis-quote</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
                <isActive>false</isActive>
                <label>Bonus</label>
            </value>
            <value>
                <fullName>Change ICP</fullName>
                <isActive>false</isActive>
                <label>Change ICP</label>
            </value>
            <value>
                <fullName>Commission Relief</fullName>
                <isActive>false</isActive>
                <label>Commission Relief</label>
            </value>
            <value>
                <fullName>Draw</fullName>
                <isActive>false</isActive>
                <label>Draw</label>
            </value>
            <value>
                <fullName>Free Unit</fullName>
                <isActive>false</isActive>
                <label>Free Unit</label>
            </value>
            <value>
                <fullName>Holdovers</fullName>
                <isActive>false</isActive>
                <label>Holdovers</label>
            </value>
            <value>
                <fullName>ICP Change</fullName>
                <isActive>false</isActive>
                <label>ICP Change</label>
            </value>
            <value>
                <fullName>Late / Non Payment</fullName>
                <isActive>false</isActive>
                <label>Late / Non Payment</label>
            </value>
            <value>
                <fullName>Manager Change</fullName>
                <isActive>false</isActive>
                <label>Manager Change</label>
            </value>
            <value>
                <fullName>OTI Change</fullName>
                <isActive>false</isActive>
                <label>OTI Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>