force-app/main/default/objects/CCR__c/fields/CCR_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>CCR_Type_Other__c</fullName>
    <label>CCR Type (Other)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Commission Relief</fullName>
            </value>
            <value>
                <fullName>Free Unit</fullName>
            </value>
            <value>
                <fullName>OTI Change</fullName>
            </value>
            <value>
                <fullName>Promotion requests</fullName>
            </value>
            <value>
                <fullName>Quota Change</fullName>
            </value>
            <value>
                <fullName>Quota Relief</fullName>
            </value>
            <value>
                <fullName>Stock requests</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>