force-app/main/default/objects/CCR__c/fields/CDM1__c.field-meta.xml
<CustomField>
    <fullName>CDM1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CCRs2</relationshipName>
    <type>Lookup</type>
</CustomField>