force-app/main/default/objects/CCR__c/fields/Cost_of_Goods_Sold__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Goods_Sold__c</fullName>
    <label>Cost of Goods Sold</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>