force-app/main/default/objects/CCR__c/fields/Current_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver_Email__c</fullName>
    <label>Current Approver&apos;s Email</label>
    <type>Email</type>
</CustomField>