force-app/main/default/objects/CCR__c/fields/Customer_Company__c.field-meta.xml
<CustomField>
    <fullName>Customer_Company__c</fullName>
    <label>Customer Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>