force-app/main/default/objects/CCR__c/fields/Customer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_Address__c</fullName>
    <label>Customer Email Address</label>
    <type>Email</type>
</CustomField>