force-app/main/default/objects/CCR__c/fields/Customer_Returns_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Returns_Type__c</fullName>
    <description>To Capture the customer returns debooking type.</description>
    <label>Customer Returns Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount Based</fullName>
            </value>
            <value>
                <fullName>LineItem Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>