force-app/main/default/objects/CCR__c/fields/Deal_Closed_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Deal_Closed_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Closed Incentive</label>
    <type>Checkbox</type>
</CustomField>