force-app/main/default/objects/CCR__c/fields/Deal_Initiated_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Initiated_Type__c</fullName>
    <formula>Text(Opportunity__r.Deal_Registration_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Initiated Type</label>
    <type>Text</type>
</CustomField>