force-app/main/default/objects/CCR__c/fields/Deal_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Number__c</fullName>
    <label>Deal Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>