force-app/main/default/objects/CCR__c/fields/Deal_Size_Tier__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Tier__c</fullName>
    <label>Deal Size Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$50,000 - $350,000</fullName>
                <label>$50,000 - $349,999</label>
            </value>
            <value>
                <fullName>$350,000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>