force-app/main/default/objects/CCR__c/fields/Describe_Sales_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Describe_Sales_Campaign__c</fullName>
    <inlineHelpText>Explain the robust sales campaign process for this client (Best practices such as: Names of Rubrik executives involved, Request for references (case studies, videos) from client, Materials that highlight Rubrik&apos;s superiority over Cohesity</inlineHelpText>
    <label>Describe Sales Campaign</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>