force-app/main/default/objects/CCR__c/fields/Distributor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Lookup__c</fullName>
    <formula>Opportunity__r.Distributor_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Distributor Lookup pulls from Opportunity Distributor Lookup field</inlineHelpText>
    <label>Distributor Lookup</label>
    <type>Text</type>
</CustomField>