force-app/main/default/objects/CCR__c/fields/Does_CCR_affect_People_or_Territory__c.field-meta.xml
<CustomField>
    <fullName>Does_CCR_affect_People_or_Territory__c</fullName>
    <description>Created for SAL26-441</description>
    <label>Does CCR affect People or Territory?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>