force-app/main/default/objects/CCR__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <label>Exception Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>