force-app/main/default/objects/CCR__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Split Exception</fullName>
            </value>
            <value>
                <fullName>Comp Exception</fullName>
            </value>
            <value>
                <fullName>SPIFF Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>