force-app/main/default/objects/CCR__c/fields/Existing_Customers_getting_transferred__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customers_getting_transferred__c</fullName>
    <label>Existing Customers getting transferred?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>