force-app/main/default/objects/CCR__c/fields/If_yes_which_accounts__c.field-meta.xml
<CustomField>
    <fullName>If_yes_which_accounts__c</fullName>
    <label>If yes, which accounts?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>