force-app/main/default/objects/CCR__c/fields/Impacts_Commission__c.field-meta.xml
<CustomField>
    <fullName>Impacts_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking the box will denote the decision should be included in Xactly data feed impacting commissions.</description>
    <label>Impacts Commission</label>
    <type>Checkbox</type>
</CustomField>