force-app/main/default/objects/CCR__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive</label>
    <referenceTo>Incentives__c</referenceTo>
    <relationshipLabel>CCRs</relationshipLabel>
    <relationshipName>CCRs</relationshipName>
    <type>Lookup</type>
</CustomField>