force-app/main/default/objects/CCR__c/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <formula>TEXT(Incentive__r.CCR_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive Type</label>
    <type>Text</type>
</CustomField>