force-app/main/default/objects/CCR__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>This field is only used and visible only for CCR approvers who can add their notes.</description>
    <label>Internal Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>