force-app/main/default/objects/CCR__c/fields/Justifications__c.field-meta.xml
<CustomField>
    <fullName>Justifications__c</fullName>
    <description>Justifications based on selected CCR Type , Only for Internal CCRs</description>
    <label>Justifications</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTE Change</fullName>
            </value>
            <value>
                <fullName>AE/SE/SDR mapping change</fullName>
            </value>
            <value>
                <fullName>Bookings Quota</fullName>
            </value>
            <value>
                <fullName>Logo Quota Change</fullName>
            </value>
            <value>
                <fullName>Request Draw</fullName>
            </value>
            <value>
                <fullName>Competitive Pricing</fullName>
            </value>
            <value>
                <fullName>Cohesity Specific Situation</fullName>
            </value>
            <value>
                <fullName>Legacy Pricing</fullName>
            </value>
            <value>
                <fullName>Legacy List Price / Price Floors</fullName>
            </value>
            <value>
                <fullName>Sales Engineer Credit Exception</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Commissionable credit exception</fullName>
            </value>
            <value>
                <fullName>SPIFF eligibility exception</fullName>
            </value>
            <value>
                <fullName>Global Account Crediting</fullName>
            </value>
            <value>
                <fullName>Global Commissionable Credit Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>