force-app/main/default/objects/CCR__c/fields/Manager_at_VP_level__c.field-meta.xml
<CustomField>
    <fullName>Manager_at_VP_level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager at VP level</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CCRs1</relationshipName>
    <type>Lookup</type>
</CustomField>