force-app/main/default/objects/CCR__c/fields/Meeting_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting Incentive</label>
    <type>Checkbox</type>
</CustomField>