force-app/main/default/objects/CCR__c/fields/New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CCRs (New Opportunity)</relationshipLabel>
    <relationshipName>CCRs1</relationshipName>
    <type>Lookup</type>
</CustomField>