force-app/main/default/objects/CCR__c/fields/New_Quota__c.field-meta.xml
<CustomField>
    <fullName>New_Quota__c</fullName>
    <label>New Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>