force-app/main/default/objects/CCR__c/fields/Number_of_Attchments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attchments__c</fullName>
    <label># of Attchments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>