force-app/main/default/objects/CCR__c/fields/Number_of_Briks_swapped__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Briks_swapped__c</fullName>
    <label>Number of Briks swapped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>