force-app/main/default/objects/CCR__c/fields/Old_Quota__c.field-meta.xml
<CustomField>
    <fullName>Old_Quota__c</fullName>
    <label>Old Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>