force-app/main/default/objects/CCR__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CCRs</relationshipLabel>
    <relationshipName>CCRs</relationshipName>
    <type>Lookup</type>
</CustomField>