force-app/main/default/objects/CCR__c/fields/Opportunity_Amount_Override__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_Override__c</fullName>
    <description>Override field  if CCR amount is not based off of the Opportunity value</description>
    <label>Opportunity Amount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>