force-app/main/default/objects/CCR__c/fields/Partner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CCRs (Partner Company Name)</relationshipLabel>
    <relationshipName>CCRs1</relationshipName>
    <type>Lookup</type>
</CustomField>