force-app/main/default/objects/CCR__c/fields/Partner_Company_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Company_s_Name__c</fullName>
    <description>https://rubrik.atlassian.net/browse/SAL24-282</description>
    <formula>Partner_Company_Name__r.Name</formula>
    <label>Partner Company&apos;s Name</label>
    <type>Text</type>
</CustomField>