force-app/main/default/objects/CCR__c/fields/Partner_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Email__c</fullName>
    <label>Partner Payee Email</label>
    <type>Email</type>
</CustomField>