force-app/main/default/objects/CCR__c/fields/Partner_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Name__c</fullName>
    <label>Partner Payee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>