force-app/main/default/objects/CCR__c/fields/Partner_Rep_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Phone_Number__c</fullName>
    <label>Partner Payee Phone</label>
    <type>Phone</type>
</CustomField>