force-app/main/default/objects/CCR__c/fields/Partner_SE_Amount__c.field-meta.xml
<CustomField>
    <fullName>Partner_SE_Amount__c</fullName>
    <label>Partner SE Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>