force-app/main/default/objects/CCR__c/fields/Partner_SE_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_SE_Name__c</fullName>
    <label>Partner SE Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>