force-app/main/default/objects/CCR__c/fields/Partner_SE_Phone__c.field-meta.xml
<CustomField>
    <fullName>Partner_SE_Phone__c</fullName>
    <label>Partner SE Phone</label>
    <type>Phone</type>
</CustomField>